Rename new components calendar-dropdown, modal

--- a/edit/bring.html
+++ b/edit/bring.html
@@ -560,7 +560,7 @@
                                                 <div class="_1d5136v">
                                                   <div class="_1jj61m9">
                                                     <label
-                                                      class="_1yw7hpv"
+                                                      class="calendar-dropdown__label"
                                                       for="packing-item-0"
                                                     >
                                                       <div class="_1m2ich98">
@@ -621,7 +621,7 @@
                                                 <div class="_1d5136v">
                                                   <div class="_1jj61m9">
                                                     <label
-                                                      class="_1yw7hpv"
+                                                      class="calendar-dropdown__label"
                                                       for="packing-item-1"
                                                     >
                                                       <div class="_1m2ich98">
@@ -682,7 +682,7 @@
                                                 <div class="_1d5136v">
                                                   <div class="_1jj61m9">
                                                     <label
-                                                      class="_1yw7hpv"
+                                                      class="calendar-dropdown__label"
                                                       for="packing-item-2"
                                                     >
                                                       <div class="_1m2ich98">
@@ -743,7 +743,7 @@
                                                 <div class="_1d5136v">
                                                   <div class="_1jj61m9">
                                                     <label
-                                                      class="_1yw7hpv"
+                                                      class="calendar-dropdown__label"
                                                       for="packing-item-3"
                                                     >
                                                       <div class="_1m2ich98">
@@ -804,7 +804,7 @@
                                                 <div class="_1d5136v">
                                                   <div class="_1jj61m9">
                                                     <label
-                                                      class="_1yw7hpv"
+                                                      class="calendar-dropdown__label"
                                                       for="packing-item-4"
                                                     >
                                                       <div class="_1m2ich98">
@@ -865,7 +865,7 @@
                                                 <div class="_1d5136v">
                                                   <div class="_1jj61m9">
                                                     <label
-                                                      class="_1yw7hpv"
+                                                      class="calendar-dropdown__label"
                                                       for="packing-item-5"
                                                     >
                                                       <div class="_1m2ich98">
@@ -1542,7 +1542,7 @@
     <div class="hidden input-el">
       <div class="_1d5136v">
         <div class="_1jj61m9">
-         <label class="_1yw7hpv" for="packing-item-6">
+         <label class="calendar-dropdown__label" for="packing-item-6">
           <div class="_1m2ich98"><div class="_11hx67x">Item</div></div>
           <div dir="ltr">
            <div class="_fywymp7"><input data-testid="packing-item-6" class="form__input" id="packing-item-6" autocomplete="off" type="text" aria-describedby="" value="dsada" /></div>
