--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -3184,7 +3184,7 @@
           <section>
             <div class="h1e0znt6 dir dir-ltr">
               <div class="products-container__header-text-pb dir dir-ltr" style="--spacingBottom:0;">
-                <div class="t5p7tdn dir dir-ltr">
+                <div class="calendar-dropdown__title dir dir-ltr">
                   <section>
                     <h2 tabindex="-1" class="hnwb2pb dir dir-ltr" elementtiming="LCP-target">More online experiences
                     </h2>
@@ -7026,7 +7026,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                     <div role="presentation" class="presentation-dialog"
                                                                       style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 0px 0px 8px 8px; inset: 0px 0px -1px;">
                                                                     </div>
-                                                                    <div class="_tddesd"><label class="_1yw7hpv" for="phoneInputphoneNumber">
+                                                                    <div class="_tddesd"><label class="calendar-dropdown__label" for="phoneInputphoneNumber">
                                                                         <div class="_1jn0ze9">
                                                                           <div class="_11hx67x">Phone number</div>
                                                                         </div>
@@ -8872,7 +8872,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
           style="padding-top: 48px; padding-bottom: 48px;">
           <section>
             <div class="products-container__header-text-pb dir dir-ltr" style="--spacingBottom:3;">
-              <div class="t5p7tdn dir dir-ltr">
+              <div class="calendar-dropdown__title dir dir-ltr">
                 <h2 tabindex="-1" class="hnwb2pb dir dir-ltr" elementtiming="LCP-target">Things to know</h2>
               </div>
             </div>
@@ -8970,7 +8970,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
           <section>
             <div class="h1e0znt6 dir dir-ltr">
               <div class="products-container__header-text-pb dir dir-ltr" style="--spacingBottom:0;">
-                <div class="t5p7tdn dir dir-ltr">
+                <div class="calendar-dropdown__title dir dir-ltr">
                   <section>
                     <h2 tabindex="-1" class="hnwb2pb dir dir-ltr" elementtiming="LCP-target">More online experiences
                     </h2>
