--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -3008,7 +3008,7 @@
                                                       class="products-container__header-text-desc dir dir-ltr"
                                                     >
                                                       <div
-                                                        class="_uxnsba"
+                                                        class="calendar-dropdown__subtitle"
                                                         data-testid="availability-calendar-date-range"
                                                       >
                                                         Minimum stay: 2 nights
@@ -13165,7 +13165,7 @@
                     </section>
                   </div>
                 </div>
-                <div class="_8c85wg hidden">
+                <div class="modal__snackbar hidden">
                   <div class="">
                     <div role="group" class="_16ft90e">
                       <div class="_prpxj8">
@@ -13332,7 +13332,7 @@
                                               </svg>
                                             </div>
                                             <label
-                                              class="_1yw7hpv"
+                                              class="calendar-dropdown__label"
                                               for="reviews-search-input"
                                             >
                                               <div dir="ltr">
@@ -16538,14 +16538,14 @@
                                 <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth:1120px;">
                                   <div>
                                     <div class="products-container__header-text-pb dir dir-ltr" style="--spacingBottom:0;">
-                                      <div class="t5p7tdn dir dir-ltr">
+                                      <div class="calendar-dropdown__title dir dir-ltr">
                                         <section>
                                           <h2 tabindex="-1" class="hnwb2pb dir dir-ltr" elementtiming="LCP-target">
                                             Select check-in date</h2>
                                         </section>
                                       </div>
                                       <div class="products-container__header-text-desc dir dir-ltr">
-                                        <div class="_uxnsba" data-testid="availability-calendar-date-range">Minimum
+                                        <div class="calendar-dropdown__subtitle" data-testid="availability-calendar-date-range">Minimum
                                           stay: 2 nights</div>
                                       </div>
                                     </div>
