--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -1495,7 +1495,7 @@
                                                     </section>
                                                   </div>
                                                   <div class="products-container__header-text-desc dir dir-ltr">
-                                                    <div class="_uxnsba" data-testid="availability-calendar-date-range">
+                                                    <div class="calendar-dropdown__subtitle" data-testid="availability-calendar-date-range">
                                                       Minimum stay: 2 nights
                                                     </div>
                                                   </div>
@@ -6687,7 +6687,7 @@
                                                       </section>
                                                     </div>
                                                     <div class="products-container__header-text-desc dir dir-ltr">
-                                                      <div class="_uxnsba"
+                                                      <div class="calendar-dropdown__subtitle"
                                                         data-testid="availability-calendar-date-range">
                                                         Add your travel dates
                                                         for exact pricing
@@ -11277,27 +11277,27 @@
                                                                 </div>
                                                               </div>
                                                               <div id="inline-calendar" class="hidden">
-                                                                <div class="_13ah4vr"
+                                                                <div class="calendar-dropdown"
                                                                   data-testid="bookit-sidebar-availability-calendar">
-                                                                  <div class="_1aa8ytq">
-                                                                    <div class="_enjuap">
-                                                                      <div class="_h0i9fjw">
-                                                                        <div class="_q3k8d9z"><label class="_1yw7hpv"
+                                                                  <div class="calendar-dropdown__header">
+                                                                    <div class="calendar-dropdown__inputs-wrapper">
+                                                                      <div class="calendar-dropdown__inputs">
+                                                                        <div class="calendar-dropdown__input-active"><label class="calendar-dropdown__label"
                                                                             for="checkIn-book_it">
-                                                                            <div class="_7eq2v2">Check-in</div>
+                                                                            <div class="calendar-dropdown__label-title-active">Check-in</div>
                                                                             <div dir="ltr">
-                                                                              <div class="_1rhk4n5"><input
+                                                                              <div class="calendar-dropdown__input-text-active"><input
                                                                                   class="form__input" id="checkIn-book_it"
                                                                                   placeholder="Add date" type="text"
                                                                                   value=""></div>
                                                                             </div>
                                                                           </label></div>
                                                                         <div></div>
-                                                                        <div class="_1u110jjk"><label class="_1yw7hpv"
+                                                                        <div class="calendar-dropdown__input"><label class="calendar-dropdown__label"
                                                                             for="checkOut-book_it">
-                                                                            <div class="_psorrpd">Checkout</div>
+                                                                            <div class="calendar-dropdown__label-title">Checkout</div>
                                                                             <div dir="ltr">
-                                                                              <div class="_7usg0nt"><input
+                                                                              <div class="calendar-dropdown__input-text"><input
                                                                                   class="form__input" disabled=""
                                                                                   id="checkOut-book_it"
                                                                                   placeholder="Add date" type="text"
@@ -11306,11 +11306,11 @@
                                                                           </label></div>
                                                                       </div>
                                                                     </div>
-                                                                    <div class="_18x3iiu">
+                                                                    <div class="calendar-dropdown__title-wrapper">
                                                                       <div>
                                                                         <div class="products-container__header-text-pb dir dir-ltr"
                                                                           style="--spacingBottom:0;">
-                                                                          <div class="t5p7tdn dir dir-ltr">
+                                                                          <div class="calendar-dropdown__title dir dir-ltr">
                                                                             <section>
                                                                               <h2 tabindex="-1"
                                                                                 class="hnwb2pb dir dir-ltr"
@@ -11319,7 +11319,7 @@
                                                                             </section>
                                                                           </div>
                                                                           <div class="products-container__header-text-desc dir dir-ltr">
-                                                                            <div class="_uxnsba"
+                                                                            <div class="calendar-dropdown__subtitle"
                                                                               data-testid="availability-calendar-date-range">
                                                                               Minimum stay: 2 nights</div>
                                                                           </div>
@@ -13609,7 +13609,7 @@
                                                             <section>
                                                               <div class="_18x0pkv">
                                                                 <div class="_1fpuhdl">
-                                                                  <span class="_18x3iiu">
+                                                                  <span class="calendar-dropdown__title-wrapper">
                                                                     <div class="confirm-pay__price-wrapper">
                                                                       <button type="button"
                                                                         class="confirm-pay__price-btn"
@@ -13627,7 +13627,7 @@
                                                                   </span><span class="_1k4xcdh">₱149,850</span>
                                                                 </div>
                                                                 <div class="_1fpuhdl">
-                                                                  <span class="_18x3iiu">
+                                                                  <span class="calendar-dropdown__title-wrapper">
                                                                     <div class="confirm-pay__price-wrapper">
                                                                       <button type="button"
                                                                         class="confirm-pay__price-btn">
@@ -13645,7 +13645,7 @@
                                                               </div>
                                                               <div class="_1emnh212">
                                                                 <div class="_1qh0b5n">
-                                                                  <span class="_18x3iiu">
+                                                                  <span class="calendar-dropdown__title-wrapper">
                                                                     <div>
                                                                       Total
                                                                       before
@@ -19202,7 +19202,7 @@
                                               </g>
                                             </svg>
                                           </div>
-                                          <label class="_1yw7hpv" for="reviews-search-input">
+                                          <label class="calendar-dropdown__label" for="reviews-search-input">
                                             <div dir="ltr">
                                               <div class="flex">
                                                 <input placeholder="Search reviews"
@@ -24984,7 +24984,7 @@
                   </div>
                 </section>
               </div>
-              <div class="_8c85wg hidden">
+              <div class="modal__snackbar hidden">
                 <div class="">
                   <div role="group" class="_16ft90e">
                     <div class="_prpxj8">
@@ -25482,7 +25482,7 @@
                                         </g>
                                       </svg>
                                     </div>
-                                    <label class="_1yw7hpv" for="reviews-search-input">
+                                    <label class="calendar-dropdown__label" for="reviews-search-input">
                                       <div dir="ltr">
                                         <div class="flex">
                                           <input placeholder="Search reviews"
@@ -27925,14 +27925,14 @@
                                   <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth:1120px;">
                                     <div>
                                       <div class="products-container__header-text-pb dir dir-ltr" style="--spacingBottom:0;">
-                                        <div class="t5p7tdn dir dir-ltr">
+                                        <div class="calendar-dropdown__title dir dir-ltr">
                                           <section>
                                             <h2 tabindex="-1" class="hnwb2pb dir dir-ltr" elementtiming="LCP-target">
                                               Select check-in date</h2>
                                           </section>
                                         </div>
                                         <div class="products-container__header-text-desc dir dir-ltr">
-                                          <div class="_uxnsba" data-testid="availability-calendar-date-range">Minimum
+                                          <div class="calendar-dropdown__subtitle" data-testid="availability-calendar-date-range">Minimum
                                             stay: 2 nights</div>
                                         </div>
                                       </div>
@@ -29313,19 +29313,19 @@
                       <section>
                         <div class="_18x0pkv">
                           <div class="_1fpuhdl">
-                            <span class="_18x3iiu">
+                            <span class="calendar-dropdown__title-wrapper">
                               <div>3/22/2023</div>
                             </span><span class="_1k4xcdh">₱54,950</span>
                           </div>
                           <div class="_1fpuhdl">
-                            <span class="_18x3iiu">
+                            <span class="calendar-dropdown__title-wrapper">
                               <div>3/23/2023</div>
                             </span><span class="_1k4xcdh">₱54,950</span>
                           </div>
                         </div>
                         <div class="_1emnh212">
                           <div class="_1qh0b5n">
-                            <span class="_18x3iiu">
+                            <span class="calendar-dropdown__title-wrapper">
                               <div>Total Base Price</div>
                             </span><span class="_1k4xcdh">₱109,900</span>
                           </div>
