--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -7124,7 +7124,7 @@
   <div class="_1fxvefn">
     <div>
       <div class="_1jj61m9">
-        <label class="_1yw7hpv" for="wishlists.ListSettings.wishlist_name"
+        <label class="calendar-dropdown__label" for="wishlists.ListSettings.wishlist_name"
           ><div class="_1m2ich98">
             <div class="_11hx67x">Wishlist name</div>
           </div>
