--- a/loaders/products-loader.html
+++ b/loaders/products-loader.html
@@ -3464,7 +3464,7 @@
                                                         class="products-container__header-text-desc dir dir-ltr"
                                                       >
                                                         <div
-                                                          class="_uxnsba"
+                                                          class="calendar-dropdown__subtitle"
                                                           data-testid="availability-calendar-date-range"
                                                         >
                                                           Add your travel dates
