--- a/payments/payment.html
+++ b/payments/payment.html
@@ -7807,7 +7807,7 @@
                     <form>
                       <div class="_1jj61m9">
                         <label
-                          class="_1yw7hpv"
+                          class="calendar-dropdown__label"
                           for="quick_pay.coupon.modal.code_input"
                         >
                           <div class="_1jn0ze9">
@@ -7843,7 +7843,7 @@
                     <form style="margin-top: 1rem">
                       <div class="_1jj61m9">
                         <label
-                          class="_1yw7hpv"
+                          class="calendar-dropdown__label"
                           for="quick_pay.coupon.modal.code_input"
                         >
                           <div class="_1m2ich98">
@@ -11094,7 +11094,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                             <div role="presentation" class="presentation-dialog"
                               style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 0px 0px 8px 8px; inset: 0px 0px -1px;">
                             </div>
-                            <div class="_tddesd"><label class="_1yw7hpv" for="phone_number">
+                            <div class="_tddesd"><label class="calendar-dropdown__label" for="phone_number">
                                 <div class="_1jn0ze9">
                                   <div class="_11hx67x">Phone number</div>
                                 </div>
