--- a/submission/basic.html
+++ b/submission/basic.html
@@ -1230,7 +1230,7 @@
                                 </div>
                                 <div>
                                   <div class="_1jj61m9 hidden partner-confirmation-code">
-                                   <label class="_1yw7hpv" for="partner-code">
+                                   <label class="calendar-dropdown__label" for="partner-code">
                                     <div class="_1jn0ze9"><div class="_11hx67x">Partner confirmation code</div></div>
                                     <div dir="ltr">
                                      <div class="_js9i23"><input class="form__input" id="partner-code" autocomplete="off" type="text" aria-describedby="partner-code-InputField-help" value="" /></div>
