--- a/submission/bring.html
+++ b/submission/bring.html
@@ -1279,7 +1279,7 @@
     <div class="hidden input-el">
       <div class="_1d5136v">
         <div class="_1jj61m9">
-         <label class="_1yw7hpv" for="packing-item-6">
+         <label class="calendar-dropdown__label" for="packing-item-6">
           <div class="_1m2ich98"><div class="_11hx67x">Item</div></div>
           <div dir="ltr">
            <div class="_fywymp7"><input data-testid="packing-item-6" class="form__input" id="packing-item-6" autocomplete="off" type="text" aria-describedby="" value="dsada" /></div>
