--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1542,7 +1542,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                         <g fill="none"><path d="m13 24c6.0751322 0 11-4.9248678 11-11 0-6.07513225-4.9248678-11-11-11-6.07513225 0-11 4.92486775-11 11 0 6.0751322 4.92486775 11 11 11zm8-3 9 9"></path></g>
                        </svg>
                       </div>
-                      <label class="_1yw7hpv" for="search-input">
+                      <label class="calendar-dropdown__label" for="search-input">
                        <div dir="ltr">
                         <div class="flex"><input placeholder="Search" aria-label="Search" class="_1oynp31" id="search-input" autocomplete="off" type="text" aria-describedby="" value="" /></div>
                        </div>
