--- a/become-a-host/location.html
+++ b/become-a-host/location.html
@@ -341,7 +341,7 @@
                                        <div class="relative" style="flex: 1 1 0%;">
                                         <div role="presentation" class="presentation-dialog" style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 8px 8px 0px 0px; inset: 0px 0px -1px;"></div>
                                         <div class="_tddesd">
-                                         <label class="_1yw7hpv" for="street">
+                                         <label class="calendar-dropdown__label" for="street">
                                           <div class="_1m2ich98"><div class="_11hx67x">Street</div></div>
                                           <div dir="ltr">
                                            <div class="_fywymp7"><input aria-invalid="false" required="" class="form__input" id="street" autocomplete="off" type="text" aria-describedby="" value="Manila - Cavite Expressway" /></div>
@@ -367,7 +367,7 @@
                                        <div class="relative" style="flex: 1 1 0%;">
                                         <div role="presentation" class="presentation-dialog" style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 0px; inset: 0px 0px -1px;"></div>
                                         <div class="_tddesd">
-                                         <label class="_1yw7hpv" for="apt">
+                                         <label class="calendar-dropdown__label" for="apt">
                                           <div class="_1jn0ze9"><div class="_11hx67x">Apt, suite, etc. (Optional)</div></div>
                                           <div dir="ltr">
                                            <div class="_js9i23"><input aria-invalid="false" class="form__input" id="apt" autocomplete="off" type="text" aria-describedby="" value="" /></div>
@@ -393,7 +393,7 @@
                                        <div class="relative" style="flex: 1 1 0%;">
                                         <div role="presentation" class="presentation-dialog" style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 0px; inset: 0px 0px -1px;"></div>
                                         <div class="_tddesd">
-                                         <label class="_1yw7hpv" for="city">
+                                         <label class="calendar-dropdown__label" for="city">
                                           <div class="_1m2ich98"><div class="_11hx67x">City</div></div>
                                           <div dir="ltr">
                                            <div class="_fywymp7"><input aria-invalid="false" required="" class="form__input" id="city" autocomplete="off" type="text" aria-describedby="" value="Parañaque" /></div>
@@ -419,7 +419,7 @@
                                        <div class="relative" style="flex: 1 1 0%;">
                                         <div role="presentation" class="presentation-dialog" style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 0px; inset: 0px 0px -1px;"></div>
                                         <div class="_tddesd">
-                                         <label class="_1yw7hpv" for="state">
+                                         <label class="calendar-dropdown__label" for="state">
                                           <div class="_1m2ich98"><div class="_11hx67x">State (Optional)</div></div>
                                           <div dir="ltr">
                                            <div class="_fywymp7"><input aria-invalid="false" required="" class="form__input" id="state" autocomplete="off" type="text" aria-describedby="" value="Metro Manila" /></div>
@@ -445,7 +445,7 @@
                                        <div class="relative" style="flex: 1 1 0%;">
                                         <div role="presentation" class="presentation-dialog" style="background: var(--comboInputGroup_backgroundColor, none); border-radius: 0px; inset: 0px 0px -1px;"></div>
                                         <div class="_tddesd">
-                                         <label class="_1yw7hpv" for="zipcode">
+                                         <label class="calendar-dropdown__label" for="zipcode">
                                           <div class="_1jn0ze9"><div class="_11hx67x">Zip code (Optional)</div></div>
                                           <div dir="ltr">
                                            <div class="_js9i23"><input aria-invalid="false" required="" class="form__input" id="zipcode" autocomplete="off" type="text" aria-describedby="" value="" /></div>
