Rename new components hero, heading

--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -2915,7 +2915,7 @@
                                         <div class="section-container">
                                           <div style="--maxWidth: 1120px;" class="wrapper-full max__width dir dir-ltr">
                                             <section>
-                                              <div class="_yl7bo1"><svg viewBox="0 0 94 43" role="img"
+                                              <div class="hero__logo"><svg viewBox="0 0 94 43" role="img"
                                                   aria-label="Airbnb Luxe" focusable="false">
                                                   <title>Airbnb Luxe</title>
                                                   <path class="_1b17hmv"
@@ -2932,17 +2932,17 @@
                                                   </path>
                                                 </svg></div>
                                               <h2 tabindex="-1" class="heading" elementtiming="LCP-target">
-                                                <div class="_15thk4s">Extraordinary homes with five-star everything
+                                                <div class="heading__lg">Extraordinary homes with five-star everything
                                                 </div>
                                               </h2>
                                               <div class="modal__items">
-                                                <div class="_lao3nn">
-                                                  <div class="_lzotvt">Pristine and expertly designed, each Airbnb Luxe
+                                                <div class="hero__lead-wrapper">
+                                                  <div class="hero__lead">Pristine and expertly designed, each Airbnb Luxe
                                                     home comes with luxury amenities, services, and a dedicated trip
                                                     designer.</div>
                                                 </div>
                                               </div>
-                                              <div class="_y8lhwe"><a target="_blank" href="/luxury"
+                                              <div class="hero__footer"><a target="_blank" href="/luxury"
                                                   class="text-link"><span
                                                     class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"><span
                                                       class=" dir dir-ltr">Learn More</span><span
@@ -12539,7 +12539,7 @@
                                       <div class="section-container">
                                         <div style="--maxWidth: 1120px;" class="wrapper-full max__width dir dir-ltr">
                                           <section>
-                                            <div class="_yl7bo1"><svg viewBox="0 0 94 43" role="img"
+                                            <div class="hero__logo"><svg viewBox="0 0 94 43" role="img"
                                                 aria-label="Airbnb Luxe" focusable="false">
                                                 <title>Airbnb Luxe</title>
                                                 <path class="_1b17hmv"
@@ -12556,17 +12556,17 @@
                                                 </path>
                                               </svg></div>
                                             <h2 tabindex="-1" class="heading" elementtiming="LCP-target">
-                                              <div class="_15thk4s">Extraordinary homes with five-star everything
+                                              <div class="heading__lg">Extraordinary homes with five-star everything
                                               </div>
                                             </h2>
                                             <div class="modal__items">
-                                              <div class="_lao3nn">
-                                                <div class="_lzotvt">Pristine and expertly designed, each Airbnb Luxe
+                                              <div class="hero__lead-wrapper">
+                                                <div class="hero__lead">Pristine and expertly designed, each Airbnb Luxe
                                                   home comes with luxury amenities, services, and a dedicated trip
                                                   designer.</div>
                                               </div>
                                             </div>
-                                            <div class="_y8lhwe"><a target="_blank" href="/luxury"
+                                            <div class="hero__footer"><a target="_blank" href="/luxury"
                                                 class="text-link"><span
                                                   class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"><span
                                                     class=" dir dir-ltr">Learn More</span><span
