--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -25460,7 +25460,7 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="_lao3nn">
+                            <div class="hero__lead-wrapper">
                               <div class="_1v5dfva">
                                 <div class="_13qdk1f">
                                   <div class="_x5o5nt">
