Rename new components list-card, btn-primary-small

--- a/account/transaction_history.html
+++ b/account/transaction_history.html
@@ -514,7 +514,7 @@
                           <div style="margin-bottom: 16px">
                             <div class="_m5pgv4">
                               <div style="margin-bottom: 32px">
-                                <div class="_1x0jb4k">
+                                <div class="list-card__inputs">
                                   <div class="_1rauing" style="z-index: 1">
                                     <div class="pb-4">
                                       <section
