--- a/resource-center/topic.html
+++ b/resource-center/topic.html
@@ -994,7 +994,7 @@
                                 <div style="margin-bottom:32px">
                                     <div class="footer__progress-active-wrapper">
                                         <div class="_tswrdl1">
-                                            <div class="_1x0jb4k">
+                                            <div class="list-card__inputs">
                                                 <div class=" dir dir-ltr" role="group" id="resourceCenter.topic.filterChipGroup"
                                                     aria-labelledby="resourceCenter.topic.filterChipGroup-DLS-chipGroup-label">
                                                     <div class=" dir dir-ltr"
