Rename new components list-group-action

--- a/become-a-host/property-type-group.html
+++ b/become-a-host/property-type-group.html
@@ -1015,7 +1015,7 @@
               <div class="_kedp3u"><h2 tabindex="-1" class="heading" elementtiming="LCP-target">Ask a Superhost</h2></div>
               <div class="_lvhhqo">
                <button type="button" class="_15ut2yit">
-                <span class="_jr600v">
+                <span class="list-group-action__btn-body">
                  <span class="_1wiynur">
                   <div class="img-middle" style="display: inline-block; vertical-align: bottom; height: 62px; width: 62px; min-height: 1px; border-radius: 50%;">
                    <img
