--- a/become-a-host/welcome.html
+++ b/become-a-host/welcome.html
@@ -173,9 +173,9 @@
                             <h2 class="h169a49r dir dir-ltr" id="action-group-0">Finish your listing</h2>
                             <div role="group" aria-labelledby="action-group-0">
                              <div class="a1rgsqn9 a1p7fbvz dir dir-ltr">
-                              <button type="button" class="_15i50to6">
-                               <span class="_jr600v">
-                                <span class="_cy0new">
+                              <button type="button" class="list-group-action__btn">
+                               <span class="list-group-action__btn-body">
+                                <span class="list-group-action__left-icon">
                                  <div class="img-middle" style="display: inline-block; vertical-align: bottom; height: 32px; width: 32px; min-height: 1px; border-radius: 8px;">
                                   <img
                                    class="img-full"
@@ -194,7 +194,7 @@
                                  </div>
                                 </span>
                                 <span class="flex-1">dsadasdas</span>
-                                <span class="_12s5d6w">
+                                <span class="list-group-action__right-icon">
                                  <svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -210,9 +210,9 @@
                               </button>
                              </div>
                              <div class="a1rgsqn9 a1p7fbvz dir dir-ltr">
-                              <button type="button" class="_15i50to6">
-                               <span class="_jr600v">
-                                <span class="_cy0new">
+                              <button type="button" class="list-group-action__btn">
+                               <span class="list-group-action__btn-body">
+                                <span class="list-group-action__left-icon">
                                  <div class="img-middle" style="display: inline-block; vertical-align: bottom; height: 32px; width: 32px; min-height: 1px; border-radius: 8px;">
                                   <img
                                    class="img-full"
@@ -228,7 +228,7 @@
                                  </div>
                                 </span>
                                 <span class="flex-1">Your Apartment listing started October 21, 2022</span>
-                                <span class="_12s5d6w">
+                                <span class="list-group-action__right-icon">
                                  <svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -244,9 +244,9 @@
                               </button>
                              </div>
                              <div class="a1rgsqn9 a1p7fbvz dir dir-ltr">
-                              <button type="button" class="_15i50to6">
-                               <span class="_jr600v">
-                                <span class="_cy0new">
+                              <button type="button" class="list-group-action__btn">
+                               <span class="list-group-action__btn-body">
+                                <span class="list-group-action__left-icon">
                                  <div class="img-middle" style="display: inline-block; vertical-align: bottom; height: 32px; width: 32px; min-height: 1px; border-radius: 8px;">
                                   <img
                                    class="img-full"
@@ -262,7 +262,7 @@
                                  </div>
                                 </span>
                                 <span class="flex-1">Your Apartment listing</span>
-                                <span class="_12s5d6w">
+                                <span class="list-group-action__right-icon">
                                  <svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -285,9 +285,9 @@
                             <h2 class="h169a49r dir dir-ltr" id="action-group-1">Start a new listing</h2>
                             <div role="group" aria-labelledby="action-group-1">
                              <div class="a1rgsqn9 a1p7fbvz dir dir-ltr">
-                              <button type="button" class="_15i50to6">
-                               <span class="_jr600v">
-                                <span class="_cy0new">
+                              <button type="button" class="list-group-action__btn">
+                               <span class="list-group-action__btn-body">
+                                <span class="list-group-action__left-icon">
                                  <svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -300,7 +300,7 @@
                                  </svg>
                                 </span>
                                 <span class="flex-1">Create a new listing</span>
-                                <span class="_12s5d6w">
+                                <span class="list-group-action__right-icon">
                                  <svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -316,9 +316,9 @@
                               </button>
                              </div>
                              <div class="a1rgsqn9 a1p7fbvz dir dir-ltr" id="open-modal-welcome">
-                              <button type="button" class="_15i50to6">
-                               <span class="_jr600v">
-                                <span class="_cy0new">
+                              <button type="button" class="list-group-action__btn">
+                               <span class="list-group-action__btn-body">
+                                <span class="list-group-action__left-icon">
                                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 32px; width: 32px; fill: currentcolor;">
                                   <path
                                    d="M25 5a4 4 0 0 1 4 4v17a5 5 0 0 1-5 5H12a5 5 0 0 1-5-5V10a5 5 0 0 1 5-5h13zm0 2H12a3 3 0 0 0-3 3v16a3 3 0 0 0 3 3h12a3 3 0 0 0 3-3V9a2 2 0 0 0-2-2zm-3-6v2H11a6 6 0 0 0-5.996 5.775L5 9v13H3V9a8 8 0 0 1 7.75-7.996L11 1h11z"
@@ -326,7 +326,7 @@
                                  </svg>
                                 </span>
                                 <span class="flex-1">Duplicate an existing listing</span>
-                                <span class="_12s5d6w">
+                                <span class="list-group-action__right-icon">
                                  <svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
@@ -432,9 +432,9 @@
              <div class="_5xnym8">
               <div class="w-full" role="group">
                <div class="_kf50tk">
-                <button type="button" class="_15i50to6">
-                 <span class="_jr600v">
-                  <span class="_cy0new">
+                <button type="button" class="list-group-action__btn">
+                 <span class="list-group-action__btn-body">
+                  <span class="list-group-action__left-icon">
                    <div class="img-middle" style="display: inline-block; vertical-align: bottom; height: 32px; width: 32px; min-height: 1px; border-radius: 8px;">
                     <img
                      class="img-full"
@@ -453,7 +453,7 @@
                    </div>
                   </span>
                   <span class="flex-1">dsadasdas</span>
-                  <span class="_12s5d6w">
+                  <span class="list-group-action__right-icon">
                    <svg
                     viewBox="0 0 32 32"
                     xmlns="http://www.w3.org/2000/svg"
@@ -469,9 +469,9 @@
                 </button>
                </div>
                <div class="_kf50tk">
-                <button type="button" class="_15i50to6">
-                 <span class="_jr600v">
-                  <span class="_cy0new">
+                <button type="button" class="list-group-action__btn">
+                 <span class="list-group-action__btn-body">
+                  <span class="list-group-action__left-icon">
                    <div class="img-middle" style="display: inline-block; vertical-align: bottom; height: 32px; width: 32px; min-height: 1px; border-radius: 8px;">
                     <img
                      class="img-full"
@@ -487,7 +487,7 @@
                    </div>
                   </span>
                   <span class="flex-1">Your Apartment listing started October 21, 2022</span>
-                  <span class="_12s5d6w">
+                  <span class="list-group-action__right-icon">
                    <svg
                     viewBox="0 0 32 32"
                     xmlns="http://www.w3.org/2000/svg"
@@ -503,9 +503,9 @@
                 </button>
                </div>
                <div class="_kf50tk">
-                <button type="button" class="_15i50to6">
-                 <span class="_jr600v">
-                  <span class="_cy0new">
+                <button type="button" class="list-group-action__btn">
+                 <span class="list-group-action__btn-body">
+                  <span class="list-group-action__left-icon">
                    <div class="img-middle" style="display: inline-block; vertical-align: bottom; height: 32px; width: 32px; min-height: 1px; border-radius: 8px;">
                     <img
                      class="img-full"
@@ -521,7 +521,7 @@
                    </div>
                   </span>
                   <span class="flex-1">Your Apartment listing</span>
-                  <span class="_12s5d6w">
+                  <span class="list-group-action__right-icon">
                    <svg
                     viewBox="0 0 32 32"
                     xmlns="http://www.w3.org/2000/svg"
@@ -1043,7 +1043,7 @@
               <div class="_kedp3u"><h2 tabindex="-1" class="heading" elementtiming="LCP-target">Ask a Superhost</h2></div>
               <div class="_lvhhqo">
                <button type="button" class="_15ut2yit">
-                <span class="_jr600v">
+                <span class="list-group-action__btn-body">
                  <span class="_1wiynur">
                   <div class="img-middle" style="display: inline-block; vertical-align: bottom; height: 62px; width: 62px; min-height: 1px; border-radius: 50%;">
                    <img
